// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить виджет доставки в AMP 1`] = `
<div
  className="OfferAmpDeliveryInfo"
>
  <div
    className="OfferAmpDeliveryInfo__header"
  >
    Доставка из Москвы
  </div>
  <div
    className="OfferAmpDeliveryInfo__text"
  >
    Дилер доставит этот автомобиль в 
    Москву
    . Подробности уточняйте по телефону
  </div>
</div>
`;

exports[`должен отрендерить виджет доставки в AMP c текстом "и ещё 1 город" 1`] = `
<div
  className="OfferAmpDeliveryInfo"
>
  <div
    className="OfferAmpDeliveryInfo__header"
  >
    Доставка из Москвы
  </div>
  <div
    className="OfferAmpDeliveryInfo__text"
  >
    Дилер доставит этот автомобиль в 
    <span>
      Москву, Барнаул, Рим
       и 
      ещё 1 город
    </span>
    . Подробности уточняйте по телефону
  </div>
</div>
`;
